mooi fantastisch verhaaltje toegevoegd

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-
+Er was eens een hond die de ruimte in wilde. Hij werkte heel hard om een astronaut te worden.
+toen hij de kans kreeg om de ruimte in te gaan werd hij heel blij. Hij feestte met zijn ouders, hij feestte met zijn vrienden.
+en toen kwam de dag dat hij de ruimte in mocht. en daar ging hij hoor zo de lucht in hij ging hoog en hoger en nog hoger totdat hij de huizen beneden niet meer zag door de wolken.
+toen ontplofte de ruimteschip en was hij dood. Doei.
 </body>
 </html>
