--- a/index.html
+++ b/index.html
@@ -10,5 +10,56 @@ Er was eens een hond die de ruimte in wilde. Hij werkte heel hard om een astrona
 toen hij de kans kreeg om de ruimte in te gaan werd hij heel blij. Hij feestte met zijn ouders, hij feestte met zijn vrienden.
 en toen kwam de dag dat hij de ruimte in mocht. en daar ging hij hoor zo de lucht in hij ging hoog en hoger en nog hoger totdat hij de huizen beneden niet meer zag door de wolken.
 toen ontplofte de ruimteschip en was hij dood. Doei.
+
+<table border="1" solid black>
+    <tr>
+        <td>
+            Wessel
+        </td>
+        <td>
+            Dennis
+        </td>
+        <td>
+            Damian
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Schijtjoch
+        </td>
+        <td>
+            de leuke jongen
+        </td>
+        <td>
+            de mijnkreftman
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Dit is Wessel.
+            Hij is slim en werkt snel.
+        </td>
+        <td>
+            Dit is Dennis.
+            Hij is heel leuk en grappig en cool.
+        </td>
+        <td>
+            Dit is Damian.
+            Hij speelt mijnkreft en is heel aardig.
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Wessel is arrogant en denkt dat hij de beste is.
+        </td>
+        <td>
+            het enige dat niet leuk is aan Dennis is dat er niks mis met hem is.
+        </td>
+        <td>
+            Damian leert niet zo snel.
+        </td>
+    </tr>
+
+</table>
 </body>
 </html>
