--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ toen ontplofte de ruimteschip en was hij dood. Doei.
     </tr>
     <tr>
         <td>
-            Schijtjoch
+            SUPER AARDIG
         </td>
         <td>
             de leuke jongen
@@ -41,7 +41,7 @@ toen ontplofte de ruimteschip en was hij dood. Doei.
         </td>
         <td>
             Dit is Dennis.
-            Hij is heel leuk en grappig en cool.
+            Hij is niet leuk en niet grappig en niet cool.
         </td>
         <td>
             Dit is Damian.
@@ -50,13 +50,13 @@ toen ontplofte de ruimteschip en was hij dood. Doei.
     </tr>
     <tr>
         <td>
-            Wessel is arrogant en denkt dat hij de beste is.
+            
         </td>
         <td>
-            het enige dat niet leuk is aan Dennis is dat er niks mis met hem is.
+            heeft een mooie monitor
         </td>
         <td>
-            Damian leert niet zo snel.
+            Damian leert totaal niet snel.
         </td>
     </tr>
 
